# wallgen

./: CMakeLists.txt  LICENSE  Makefile  README.md  fehview.sh  w0_colorcircle.c  w1_stripes.c
extra/: fehview.sh  make_samples.sh
src/: w0_colorcircle.c  w1_stripes.c  w2_blocks.c
